# RayTracer

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: build.yml
App/include/RayTracer/: Constants.hpp  Core.hpp  Parser.hpp  PluginLoader.hpp  Position.hpp  RGBColor.hpp  Resolution.hpp  Scene.hpp
App/include/RayTracer/Abstraction/: ALight.hpp  ALights.hpp  AMaterial.hpp  AMaterials.hpp  ARenderer.hpp  AShape.hpp  AShapes.hpp  ILight.hpp  ILights.hpp  IMaterial.hpp  IMaterials.hpp  IPlugin.hpp  IPrimitives.hpp  IRenderer.hpp  IShape.hpp  IShapes.hpp
App/include/RayTracer/Clock/: Clock.hpp  Time.hpp
App/include/RayTracer/Color/: Color.hpp
App/include/RayTracer/Composite/: CompositeMaterial.hpp  Material.hpp
App/include/RayTracer/Exception/: RunTime.hpp
App/include/RayTracer/Exceptions/: RuntimeException.hpp
App/include/RayTracer/Factory/: Light.hpp  LightsFactory.hpp  Material.hpp  MaterialsFactory.hpp  Renderer.hpp  RendererFactory.hpp  RenderersFactory.hpp  Shape.hpp  ShapesFactory.hpp
App/include/RayTracer/Loader/: Plugin.hpp  PluginLoader.hpp
App/include/RayTracer/Maths/: Random.hpp
App/include/RayTracer/Scene/: Camera.hpp  Scene.hpp
App/include/RayTracer/Utils/: Color.hpp  RayHit.hpp  Rectangle3D.hpp  Resolution.hpp  Vector.hpp  Vector3D.hpp
App/plugins/: CMakeLists.txt
App/plugins/Light/: CMakeLists.txt
App/plugins/Light/Ambient/: CMakeLists.txt
App/plugins/Light/Directional/: CMakeLists.txt
App/plugins/Light/Point/: CMakeLists.txt
App/plugins/Lights/: CMakeLists.txt
App/plugins/Lights/AmbientLight/: CMakeLists.txt
App/plugins/Lights/AmbientLights/: CMakeLists.txt
App/plugins/Lights/DirectionalLight/: CMakeLists.txt
App/plugins/Lights/DirectionalLights/: CMakeLists.txt
App/plugins/Lights/PointLight/: CMakeLists.txt
App/plugins/Lights/PointLights/: CMakeLists.txt
App/plugins/Material/: CMakeLists.txt
App/plugins/Material/Reflective/: CMakeLists.txt
App/plugins/Material/Transparent/: CMakeLists.txt
App/plugins/Materials/: CMakeLists.txt
App/plugins/Materials/Color/: CMakeLists.txt
App/plugins/Materials/FlatColor/: CMakeLists.txt
App/plugins/Materials/FlatColor/include/RayTracer/: FlatColor.hpp
App/plugins/Materials/FlatColor/src/: entryPoint.cpp  flatColor.cpp
App/plugins/Renderer/: CMakeLists.txt
App/plugins/Renderer/PPM/: CMakeLists.txt
App/plugins/Renderer/PPMRenderer/: CMakeLists.txt
App/plugins/Renderer/SFML/: CMakeLists.txt
App/plugins/Renderer/SFMLRenderer/: CMakeLists.txt
App/plugins/Renderer/SFMLRenderer/include/RayTracer/: SfmlRenderer.hpp
App/plugins/Renderer/SFMLRenderer/src/: sfmlRenderer.cpp
App/plugins/Renderer/src/: entryPoint.cpp  sfmlRenderer.cpp
App/plugins/Renderers/: CMakeLists.txt
App/plugins/Renderers/PPMRenderer/: CMakeLists.txt
App/plugins/Renderers/SFMLRenderer/: CMakeLists.txt
App/plugins/Shape/: CMakeLists.txt
App/plugins/Shape/Cone/: CMakeLists.txt
App/plugins/Shape/Cylinder/: CMakeLists.txt
App/plugins/Shape/Plane/: CMakeLists.txt
App/plugins/Shape/Sphere/: CMakeLists.txt
App/plugins/Shapes/Cone/: CMakeLists.txt
App/plugins/Shapes/Cone/include/RayTracer/: ConeShape.hpp
App/plugins/Shapes/Cone/src/: coneShape.cpp  entryPoint.cpp
App/plugins/Shapes/Cylinder/: CMakeLists.txt
App/plugins/Shapes/Plane/: CMakeLists.txt
App/plugins/Shapes/Sphere/: CMakeLists.txt
App/src/: camera.cpp  core.cpp  main.cpp  parser.cpp
App/src/Factory/: light.cpp  lightsFactory.cpp  material.cpp  materialsFactory.cpp  renderer.cpp  renderersFactory.cpp  shape.cpp  shapesFactory.cpp
App/src/Loader/: plugin.cpp
App/src/Parser/: camera.cpp  light.cpp  parser.cpp  renderer.cpp  shape.cpp  utils.cpp
App/src/Parser/Entity/: camera.cpp  (+3 more)
App/src/clock/: clock.cpp
cmake/modules/: MakeDoc.cmake  myVariables.cmake
lib/: CMakeLists.txt
lib/include/Clock/: Clock.hpp  Time.hpp
lib/include/Color/: Color.hpp  RGBColor.hpp
lib/include/Maths/: Random.hpp
lib/include/myLib/: RGBColor.hpp
lib/include/myLib/Clock/: Clock.hpp
lib/src/: clock.cpp  color.cpp  random.cpp
scenes/: colored_lights.cfg  max_lights.cfg  max_lights2.cfg  mon.cfg
(+77 files in other folders)
